@@ -81,6 +81,7 @@
       <Name>System.Data</Name>
     </Reference>
     <Reference Include="System.Runtime.Remoting" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
@@ -238,6 +239,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Lifestyle\PerThreadLifestyleManager.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Lifestyle\PerWebRequestLifestyleManager.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Lifestyle\PoolableLifestyleManager.cs">
